# Matuda

./: .gitignore  README.md  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release-test.yml  release.yml
daemon/: Cargo.toml
daemon/src/: main.rs
scripts/: setupDaemon.sh  setupMatugen.sh
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: matuda-template.css
src-tauri/src/: appmanager.rs  commands.rs  lib.rs  main.rs
src/components/: Button.tsx  FieldText.tsx  Form.tsx  Group.tsx  LoadingScreen.tsx  Modal.tsx  Navigation.tsx  Option.tsx  Range.tsx  Select.tsx  SidebarItem.tsx  SplitView.tsx  Switch.tsx  index.ts
src/data/: index.ts
src/layout/: Layout.tsx
src/pages/ControlPanel/: ControlPanel.tsx
src/pages/ControlPanel/components/: AppManager.tsx  ModalContent.tsx  ServiceManager.tsx
src/pages/ControlPanel/hooks/: useAppManager.ts  useControlPanel.ts  useModalContent.ts  useServiceManager.ts
src/pages/MatugenConfig/: MatugenConfig.tsx
src/pages/MatugenConfig/components/: ModalTemplateContent.tsx  PaletteConfig.tsx  SaveConfig.tsx  TemplatesConfig.tsx
src/pages/MatugenConfig/hooks/: useModalTemplateContent.ts  usePaletteConfig.ts  useSaveConfig.ts  useTemplatesConfig.ts
src/store/: useAppStore.ts
src/types/: index.ts
src/utils/: openFile.ts  parseConfig.ts
