[package]
name = "matuda"
version = "0.1.0"
description = "Control panel for Matugen with service and daemon that detects wallpaper changes in GNOME and recreates templates "
authors = ["oscar370"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "matuda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"
rust-ini = "0.21.3"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

